--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,12 +86,13 @@ add_executable(
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
 find_package(AntTweakBar REQUIRED)
+find_package(noise REQUIRED)
 SET(CMAKE_FIND_FRAMEWORK NEVER)
 find_package(SFML 2 COMPONENTS system REQUIRED)
-include_directories( ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_PATH} ${GLFW_INCLUDE_DIR} ${ANTTWEAKBAR_INCLUDE_DIR} ${SFML_INCLUDE_DIR})
+include_directories( ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_PATH} ${GLFW_INCLUDE_DIR} ${ANTTWEAKBAR_INCLUDE_DIR} ${NOISE_INCLUDE_DIR} ${SFML_INCLUDE_DIR})
 
 # libs
-target_link_libraries(${EXEC} ${GLEW_LIBRARY} ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES} ${ANTTWEAKBAR_LIBRARY} ${SFML_LIBRARIES})
+target_link_libraries(${EXEC} ${GLEW_LIBRARY} ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES} ${ANTTWEAKBAR_LIBRARY} ${NOISE_LIBRARY} ${SFML_LIBRARIES})
 
 add_custom_target(run
   COMMAND ${EXECUTABLE_OUTPUT_PATH}/${EXEC}
