--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,10 +70,10 @@ SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 file(GLOB_RECURSE source_files ${SRC}/*)
 
 # Do not compile glew on linux and osx
-if (NOT OS_WINDOWS)
+#if (NOT OS_WINDOWS)
   list(REMOVE_ITEM source_files ${SRC}/glew/glew.c)
   find_package(GLEW REQUIRED)
-endif()
+#endif()
 
 # Testing executable
 set(EXEC spacecraft)
