--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,9 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     get_filename_component(name ${file} NAME)
     configure_file(${file} ${EXECUTABLE_OUTPUT_PATH} COPYONLY)
   endforeach()
+  if (CMAKE_BUILD_TYPE MATCHES "RELEASE")
+    SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -Wl,-subsystem,windows")
+  endif()
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   set(OS_LINUX 1)
   set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${PROJECT_SOURCE_DIR}/extlibs/libs-linux)
