--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,8 +146,11 @@ file(GLOB_RECURSE all_obj ${OBJ_FILES}/*.o)
 list(REMOVE_ITEM all_obj ${OBJ_FILES}/main.cpp.o)
 #STRING(REPLACE ; " " all_obj "${all_obj}")
 file(GLOB_RECURSE all_tests ${PROJECT_SOURCE_DIR}/tests/*.cpp)
+
 # XXX this line makes the difference between being able to compile tests ot not on OSX. I just cannot understand why
-#message("obj: ${all_obj}")
+if (NOT OS_WINDOWS)
+	message("obj: ${all_obj}")
+endif()
 
 foreach(t ${all_tests})
 	GET_FILENAME_COMPONENT(f_base ${t} NAME_WE)
