--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,169 +1,212 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.9)
+project(spacraft)
 
-# define a macro that helps defining an option
-macro(set_option var default type docstring)
-  if(NOT DEFINED ${var})
-    set(${var} ${default})
-  endif()
-  set(${var} ${${var}} CACHE ${type} ${docstring} FORCE)
-endmacro()
-
-set_option(CMAKE_BUILD_TYPE RELEASE STRING "DEBUG: -g, RELEASE: -O3")
-SET(CMAKE_BUILD_TYPE "DEBUG")
+# Detect Web
+if(CMAKE_CXX_COMPILER MATCHES "/em\\+\\+(-[a-zA-Z0-9.])?$")
+  set(Web true)
+else()
+  set(Web false)
+endif()
+message(" * Build type : " ${CMAKE_BUILD_TYPE})
+message(" * C compiler: ${CMAKE_C_COMPILER}")
+message(" * C++ compiler: ${CMAKE_CXX_COMPILER}")
+message(" * System: " ${CMAKE_SYSTEM_NAME} )
+message(" * Use Web : " ${Web})
 
 if (CMAKE_BUILD_TYPE MATCHES "RELEASE")
   add_definitions(-DNDEBUG)
   #add_definitions(-DNTWBAR)
 endif()
 
-project(spacecraft)
+# C++ 11
+if (Web)
+  string(APPEND CMAKE_CXX_FLAGS " --std=c++11")
+else()
+  set (CMAKE_CXX_STANDARD 11)
+endif()
 
-# bin dir
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+# modules
+SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 
-# Configure OS versions with some variables
-set(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} ${PROJECT_SOURCE_DIR}/extlibs/headers)
-if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  set(OS_WINDOWS 1)
-  set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} C:/MinGW/lib C:/CodeBlocks/MinGW/lib ${PROJECT_SOURCE_DIR}/extlibs/libs-win32)
-  set(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} C:/MinGW/include C:/CodeBlocks/MinGW/include )
-  add_definitions(-DGLEW_NO_GLU -DGLEW_BUILD -DGLEW_STATIC)
-  # create the bin dir and copy the dlls
+# Enable compiler warning.
+string(APPEND CMAKE_CXX_FLAGS " -Wall")
+string(APPEND CMAKE_CXX_FLAGS " -Wextra")
+string(APPEND CMAKE_CXX_FLAGS " -Wno-reorder")
+string(APPEND CMAKE_CXX_FLAGS " -Wno-unused-parameter")
+
+# Our code resides in ./src
+include_directories(${PROJECT_SOURCE_DIR}/src)
+file(GLOB_RECURSE source_files ${PROJECT_SOURCE_DIR}/src/*)
+
+# Put executable in the bin directory (,because we liked it.)
+if (Web)
+  set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin_web)
+else()
+  set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+endif()
+
+# OS specifics -----------------------------------------------------------------
+
+#------------
+#    Web
+#------------
+if (Web)
+  set(spacecraft_executable "spacecraft.js")
+  include_directories(${CMAKE_SOURCE_DIR}/extlibs/headers/)
+  list(APPEND CMAKE_LIBRARY_PATH "${CMAKE_SOURCE_DIR}/extlibs/libs-linux")
+
+  # Emscripten options
+  string(APPEND CMAKE_CXX_FLAGS " -s USE_GLFW=3 ")
+  #string(APPEND CMAKE_CXX_FLAGS " -s NO_FILESYSTEM=1 ")
+  string(APPEND CMAKE_CXX_FLAGS " -s DEMANGLE_SUPPORT=1")
+  string(APPEND CMAKE_CXX_FLAGS " -s ALLOW_MEMORY_GROWTH=1")
+  string(APPEND CMAKE_CXX_FLAGS " -s ASSERTIONS=1")
+  string(APPEND CMAKE_CXX_FLAGS " -s USE_WEBGL2=1")
+  string(APPEND CMAKE_CXX_FLAGS " -s FULL_ES3=1")
+
+  # Allow the directories /shader and /data to be fetched by the web browser.
+  file(GLOB shader_files "${CMAKE_SOURCE_DIR}/shader/**/*")
+  file(GLOB data_files "${CMAKE_SOURCE_DIR}/data/*")
+  set(imported_files ${shader_files} ${data_files})
+  foreach(file ${imported_files})
+    file(RELATIVE_PATH relative_file ${CMAKE_SOURCE_DIR} ${file})
+    string(APPEND CMAKE_CXX_FLAGS " --preload-file ${file}@/${relative_file}")
+  endforeach()
+
+  # Do not compile glew (only for windows).
+  list(REMOVE_ITEM source_files ${SRC}/glew/glew.c)
+
+#------------
+#   Linux
+#------------
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  set(spacecraft_executable "spacecraft")
+  list(APPEND CMAKE_LIBRARY_PATH "${CMAKE_SOURCE_DIR}/extlibs/libs-linux")
+  include_directories(${CMAKE_SOURCE_DIR}/extlibs/headers/)
+
+  add_definitions(-DGLEW_STATIC)
+
+  # Do not compile glew (only for windows).
+  list(REMOVE_ITEM source_files ${SRC}/glew/glew.c)
+
+#------------
+#   Mac
+#------------
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+  set(spacecraft_executable "spacecraft")
+  list(APPEND CMAKE_LIBRARY_PATH ./extlibs/libs-osx)
+  include_directories(${CMAKE_SOURCE_DIR}/extlibs/headers/)
+
+  add_custom_target(osxfix
+    COMMAND ${PROJECT_SOURCE_DIR}/osx-fix.sh bin/*
+    DEPENDS
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+  )
+
+  # Do not compile glew (only for windows).
+  list(REMOVE_ITEM source_files ${SRC}/glew/glew.c)
+
+#------------
+#   Windows
+#------------
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+  set(spacecraft_executable "spacecraft.exe")
+  list(APPEND CMAKE_LIBRARY_PATH ./extlibs/libs-win32)
+  include_directories(${CMAKE_SOURCE_DIR}/extlibs/headers/)
+
+  # ??? (smealum specifics ?)
+  list(APPEND CMAKE_INCLUDE_PATH "C:/MinGW/include")
+  list(APPEND CMAKE_INCLUDE_PATH "C:/CodeBlocks/MinGW/include")
+  list(APPEND CMAKE_LIBRARY_PATH "C:/MinGW/lib")
+  list(APPEND CMAKE_LIBRARY_PATH "C:/CodeBlocks/MinGW/lib")
+
+  # Copy the dll in the bin directory.
   file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})
   file(GLOB_RECURSE dll_files extlibs/dll/*)
   foreach(file ${dll_files})
     get_filename_component(name ${file} NAME)
     configure_file(${file} ${EXECUTABLE_OUTPUT_PATH} COPYONLY)
   endforeach()
+  
+  # ???
   if (CMAKE_BUILD_TYPE MATCHES "RELEASE")
-    SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -Wl,-subsystem,windows")
+    list(APPEND CMAKE_EXE_LINKER_FLAGS "-Wl,-subsystem,windows")
   endif()
-elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-  set(OS_LINUX 1)
-  set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${PROJECT_SOURCE_DIR}/extlibs/libs-linux)
+
+  add_definitions(-DGLEW_NO_GLU)
+  add_definitions(-DGLEW_BUILD)
   add_definitions(-DGLEW_STATIC)
-elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  set(OS_OSX 1)
-  set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${PROJECT_SOURCE_DIR}/extlibs/libs-osx)
-  add_custom_target(osxfix
-	  COMMAND ${PROJECT_SOURCE_DIR}/osx-fix.sh bin/*
-	  DEPENDS
-	  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-	  )
-else()
-  message("FATAL: Unsupported OS")
-  return()
 endif()
 
-# set some options
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-reorder -Wno-unused-parameter")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -W -O3")
-# -g is there by default
-#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O3")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
-
-# Compiler-specific C++11 activation.
-if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
-    execute_process(
-        COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
-    if (NOT (GCC_VERSION VERSION_GREATER 4.7 OR GCC_VERSION VERSION_EQUAL 4.7))
-        message("WARNING: ${PROJECT_NAME} requires g++ 4.7 or greater in order to use c++11. Instead c++0x will be used.")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX} -std=c++0x")
-    else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-    endif ()
-elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
-else ()
-    message(FATAL_ERROR "Your C++ compiler does not support C++11.")
-endif ()
-
-set(SRC ${PROJECT_SOURCE_DIR}/src)
-include_directories(${SRC})
-
-# modules
-SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
-
-# find files
-file(GLOB_RECURSE source_files ${SRC}/*)
-
-# Do not compile glew on linux and osx
-#if (NOT OS_WINDOWS)
-  list(REMOVE_ITEM source_files ${SRC}/glew/glew.c)
-  find_package(GLEW REQUIRED)
-#endif()
-
-# Testing executable
-set(EXEC spacecraft)
-add_executable(
-  ${EXEC}
-  ${source_files}
-)
+add_executable( ${spacecraft_executable} ${source_files})
 
 if(${OS_OSX})
-	add_dependencies(${EXEC} fixosx)
+	add_dependencies(${spacecraft_executable} fixosx)
 endif()
 
-# Finding libs
-find_package(OpenGL REQUIRED)
-find_package(glfw3 REQUIRED)
-find_package(AntTweakBar REQUIRED)
-find_package(noise REQUIRED)
-SET(CMAKE_FIND_FRAMEWORK NEVER)
-find_package(SFML 2 COMPONENTS system REQUIRED)
-include_directories( ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_PATH} ${GLFW_INCLUDE_DIR} ${ANTTWEAKBAR_INCLUDE_DIR} ${NOISE_INCLUDE_DIR} ${SFML_INCLUDE_DIR})
+# OpenGL
+if (NOT Web)
+  find_package(OpenGL REQUIRED)
+  include_directories(${OPENGL_INCLUDE_DIR})
+  target_link_libraries(${spacecraft_executable} ${OPENGL_LIBRARIES})
+endif()
 
-# libs
-target_link_libraries(${EXEC} ${GLEW_LIBRARY} ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES} ${ANTTWEAKBAR_LIBRARY} ${NOISE_LIBRARY} ${SFML_LIBRARIES})
+# glew
+if (NOT Web)
+  find_package(GLEW REQUIRED)
+  include_directories(${GLEW_INCLUDE_PATH})
+  target_link_libraries(${spacecraft_executable} ${GLEW_LIBRARY})
+endif()
+
+# glfw3
+if (NOT Web) 
+  find_package(glfw3 REQUIRED)
+  include_directories(${GLFW_INCLUDE_DIRS})
+  target_link_libraries(${spacecraft_executable} ${GLFW_LIBRARIES})
+  message(STATUS arthur = ${GLFW_LIBRARIES})
+endif()
+
+# AntTweakBar
+if (NOT Web)
+  find_package(AntTweakBar REQUIRED)
+  include_directories(${ANTTWEAKBAR_INCLUDE_DIRS})
+  target_link_libraries(${spacecraft_executable} ${ANTTWEAKBAR_LIBRARY})
+else()
+  add_definitions(-DNTWBAR)
+endif()
+
+# libnoise
+if (NOT Web)
+  find_package(noise REQUIRED)
+  include_directories(${NOISE_INCLUDE_DIRS})
+  target_link_libraries(${spacecraft_executable} ${NOISE_LIBRARY})
+endif()
+
+# SFML
+if (NOT Web)
+  find_package(SFML 2 COMPONENTS system REQUIRED)
+  include_directories(${SFML_INCLUDE_DIR})
+  target_link_libraries(${spacecraft_executable} ${SFML_LIBRARIES})
+endif()
+
+# ??? macos specifics?
+SET(CMAKE_FIND_FRAMEWORK NEVER)
 
 if (${OS_OSX})
 	add_custom_target(run
-		COMMAND ${EXECUTABLE_OUTPUT_PATH}/${EXEC}
-		DEPENDS ${EXEC} osxfix
+		COMMAND ${EXECUTABLE_OUTPUT_PATH}/${spacecraft_executable}
+		DEPENDS ${spacecraft_executable} osxfix
 		WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-		)
+	)
 else()
 	add_custom_target(run
-		COMMAND ${EXECUTABLE_OUTPUT_PATH}/${EXEC}
-		DEPENDS ${EXEC}
+		COMMAND ${EXECUTABLE_OUTPUT_PATH}/${spacecraft_executable}
+		DEPENDS ${spacecraft_executable}
 		WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-		)
+	)
 endif()
 
-add_custom_target(valgrind
-  COMMAND valgrind --leak-check=full --tool=memcheck
-  ${EXECUTABLE_OUTPUT_PATH}/${EXEC}
-  DEPENDS ${EXEC}
-  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-  )
-
-# tests
-enable_testing()
-SET(OBJ_FILES ${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${EXEC}.dir/src)
-#message("OBJ: ${OBJ_FILES}")
-file(GLOB_RECURSE all_obj ${OBJ_FILES}/*.o)
-list(REMOVE_ITEM all_obj ${OBJ_FILES}/main.cpp.o)
-#STRING(REPLACE ; " " all_obj "${all_obj}")
-file(GLOB_RECURSE all_tests ${PROJECT_SOURCE_DIR}/tests/*.cpp)
-# XXX this line makes the difference between being able to compile tests ot not on OSX. I just cannot understand why
-#message("obj: ${all_obj}")
-
-foreach(t ${all_tests})
-	GET_FILENAME_COMPONENT(f_base ${t} NAME_WE)
-	add_executable(${f_base} ${t} ${all_obj})
-	add_dependencies(${f_base} ${EXEC})
-	target_link_libraries(${f_base} ${GLEW_LIBRARY} ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES} ${ANTTWEAKBAR_LIBRARY} ${NOISE_LIBRARY} ${SFML_LIBRARIES})
-	add_test(${f_base}
-		${EXECUTABLE_OUTPUT_PATH}/${f_base}
-		${PROJECT_SOURCE_DIR})
-	#add_test(NAME ${EXEC}
-	#WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-	#COMMAND ${EXECUTABLE_OUTPUT_PATH}/${EXEC})
-endforeach(t)
-
-# Doc
-
+# Generate documentation -------------------------------------------------------
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
   add_custom_target(doc
